[metadata]
name = ironic-python-heartbeater
summary = Lookup/Heartbeat client for OpenStack Ironic API
description-file =
    README.rst
author = pshchelo
author-email = shchelokovskyy@gmail.com
home-page = https://github.com/pshchelo/ironic-python-heartbeater
license = Apache-2
classifier =
    Development Status :: 1 - Planning
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    ironic_python_heartbeater

[entry_points]
console_scripts = 
    ironic-python-heartbeater = ironic_python_heartbeater.ironic_python_heartbeater:main

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1
